syntax = "proto3";

package com.hmproductions.bingo;
option java_multiple_files = true;

import "actions/GetGridSize.proto";
import "actions/AddPlayer.proto";
import "actions/RemovePlayer.proto";
import "actions/SetPlayerReady.proto";
import "actions/Unsubscribe.proto";

import "models/Subscription.proto";

import "datastreams/RoomEvents.proto";


service BingoActionService {
    rpc GetGridSize(actions.GetGridSizeRequest) returns (actions.GetGridSizeResponse);

    rpc AddPlayer(actions.AddPlayerRequest) returns (actions.AddPlayerResponse);
    rpc RemovePlayer(actions.RemovePlayerRequest) returns (actions.RemovePlayerResponse);
    rpc SetPlayerReady(actions.SetPlayerReadyRequest) returns (actions.SetPlayerReadyResponse);
    rpc Unsubscribe(actions.UnsubscribeRequest) returns (actions.UnsubscribeResponse);
}

service BingoStreamService {
    rpc GetRoomEventUpdates(models.Subscription) returns (stream datastreams.RoomEventUpdate);
}
